--- a/src/dawn/node/interop/WebGPU.h.tmpl
+++ b/src/dawn/node/interop/WebGPU.h.tmpl
@@ -39,7 +39,7 @@ namespace wgpu {
 namespace interop {
 
 // Initialize() registers the WebGPU types with the Napi environment.
-void Initialize(Napi::Env env);
+Napi::Object Initialize(Napi::Env env);
 
 {{  range $ := .Declarations}}
 {{-        if IsDictionary $}}{{template "Dictionary" $}}
